--- a/templates/filemanager/map.html
+++ b/templates/filemanager/map.html
@@ -18,16 +18,8 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
-    <div id="map" style="width: 100%; height: 600px;"></div>
-    <script>
-        var map = L.map('map').setView([55.751244, 37.618423], 10);  // Центр Москвы
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-        }).addTo(map);
-
-        var geojsonData = {{ geojson_data|safe }};
-        L.geoJSON(geojsonData).addTo(map);
-    </script>
+    <h1>Первичный GeoJSON из линий</h1>
+      {{ plotly_data|safe }}
 </body>
 </html>
 {% endblock content %}<!DOCTYPE html>
