Добавлен просмотр метрических и полигонных координат

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -21,6 +21,7 @@
         <!-- Main CSS-->
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/sidebar-style.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/button.css' %}" />
         <!-- Font-icon css-->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
         {% block extracss %}
